--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@uniswap/sdk-core",
+  "name": "@xenswap/sdk-core",
   "license": "MIT",
-  "version": "4.0.7",
+  "version": "4.0.9",
   "description": "⚒️ An SDK for building applications on top of Uniswap V3",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/Uniswap/uniswap-sdk-core.git",
+  "repository": "https://github.com/Xen-chain/sdk-core.git",
   "keywords": [
     "uniswap",
     "ethereum"
