--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@xenswap/sdk-core",
   "license": "MIT",
-  "version": "4.0.9",
-  "description": "⚒️ An SDK for building applications on top of Uniswap V3",
+  "version": "1.0.0",
+  "description": "⚒️ An SDK for building applications on top of Uniswap V3, Modified for XENSwap",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
